--- a/index.html
+++ b/index.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <meta charset="UTF-8">
-  <title>WBS</title>
-  <link rel="stylesheet" href="styles/stylesheet.css">
-</head>
+    <meta charset="UTF-8">
+    <title>WBS</title>
+    <link rel="stylesheet" href="styles/stylesheet.css">
+  </head>
 
 
-<body>
-<h1 class="titleWBS">○○プロジェクトWBS</h1>
+  <body>
+  <h1 class="titleWBS">○○プロジェクトWBS</h1>
 
-<div class="operateList">
-<p>プロジェクト期間</p>
-</div>
+  <div class="operateList">
+    <div class="topList">
+      <p>プロジェクト期間：
+      <input>
+      ～
+      <input>
+      　　
+      担当者：
+      <input>
+      </p>
+    </div>
+  </div>
+  
+  <div class="taskList">
+    <p>タスク一覧</p>
+    
+  </div>
 
 
 
 
-</body>
+  </body>
